--- a/templates/home.html
+++ b/templates/home.html
@@ -215,7 +215,7 @@ a.button:hover {
 </head>
 <body>
     <header>
-        <h1>ADD YOUR NAME HERE</h1>
+        <h1>ASHISH SERVERX</h1>
         <button class="dark-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
     </header>
     <main>
@@ -251,7 +251,7 @@ a.button:hover {
         </div>
     </main>
     <footer>
-        ©️ {{ 2025 }} TASK MADE BY ❤️ ADD YOUR NAME 
+        ©️ {{ 2025 }} TASK MADE BY ❤️ ASHISH 
     </footer>
 
     <script>
